# IDG-Social-Nav

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
idg_social_nav/: __init__.py  advisor_scripted.py  config.py  core.py  discomfort.py  env.py  eval_common.py  grid.py  llm_validator.py  llmproxy.py  metrics.py  paths.py  plot_results.py  precompute_advice.py  render.py  run_eval.py  run_experiments.py  scenarios.py  vlm_advisor.py
idg_social_nav/rl_modules/: __init__.py  always_obey_validator.py  fixed_blend_validator.py  oracle_validator.py  shortest_path_proposer.py
idg_social_nav/rl_modules/catalog/: catalog.py  configs.py  encoder.py
tests/: test_advisor_scripted.py  test_config.py  test_discomfort.py  test_env.py  test_eval_common.py  test_llm_validator.py  test_metrics.py  test_render.py  test_route_noise.py  test_scenarios.py  test_standoff_regression.py  test_stochastic_peds.py  test_validators.py  test_vlm_advisor.py
